@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

class "<<interface>>\nCommand" as Command
class "{abstract}\nFileBasedCommand" as FileBasedCommand

class ExportCommand
class ImportCommand

class Storage

package Model <<Rectangle>> {
Class HiddenModel #FFFFFF
}

package Storage <<Rectangle>> {
Class HiddenStorage #FFFFFF
}

FileBasedCommand .up.|> Command
ExportCommand -up-|> FileBasedCommand
ImportCommand -up-|> FileBasedCommand

FileBasedCommand -r-> Storage
FileBasedCommand ..> Model

@enduml
